--- a/torque-lido.tmpl
+++ b/torque-lido.tmpl
@@ -19,7 +19,7 @@ use.mpi = (resources$pm.backend %??% "default") == "mpi"
 walltimes = 3600L * c(1L, 8L, 48L, 672L)
 queue = c("short", "med", "long", "ultralong")[wf(resources$walltime <= walltimes)]
 ## check default modules
-modules.default = c(binutils = "binutils/2.25", gcc = "gcc/4.9.3", openblas = "openblas/0.2.17")
+# modules.default = c(binutils = "binutils/2.25", gcc = "gcc/4.9.3", openblas = "openblas/0.2.17")
 modules = resources$modules
 for (i in seq_along(modules.default)) {
   if (!any(grepl(paste0("^", names(modules.default[i]), "/?[0-9\\.]*$"), modules))) {
