--- a/torque-lido.tmpl
+++ b/torque-lido.tmpl
@@ -58,6 +58,8 @@ if (length(grep("^/data/", log.file)) > 0L) {
 #PBS -j 	
 <%= if (array.jobs) sprintf("#PBS -t 1-%i", nrow(jobs)) else "" %>
 
+cd ${PBS_O_WORKDIR}
+
 ## setup modules
 source /sysdata/shared/sfw/Modules/default/init/bash
 module add <%= modules %>
